--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
                         content: 'Une fois la transaction lancée, elle sera confirmée et les fonds apparaîtront sur votre compte Stake.<br>' +
                             'Notez que les délais de traitement peuvent varier en fonction de la méthode choisie. Soyez donc patient si la transaction prend un peu de temps. Si vous avez des questions ou des problèmes, n\'hésitez pas à contacter le support client de Stake pour obtenir de l\'aide.'
                     },
-                ]
+                ],
+                final: ''
             },
             withdraw: {
                 title: 'Comment retirer vos fonds sur Stake ?',
@@ -238,7 +239,8 @@
                             'Ensuite, indiquez le montant à retirer et confirmez la transaction.<br>' +
                             'Si vous rencontrez des difficultés ou avez des questions, n\'hésitez pas à contacter le support client de Stake pour obtenir de l\'aide. Vous pouvez les joindre directement depuis la plateforme.'
                     },
-                ]
+                ],
+                final: ''
             }
         },
         en: {
